@@ -1,7 +1,6 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.beerslawlab.concentration.model;
 
-import edu.colorado.phet.beerslawlab.common.model.Solute;
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 
 /**
